# artnet-controlling-ws-server

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  test.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
artnet/: Cargo.toml  README.md
artnet/src/: client.rs  lib.rs  package.rs  socket.rs
artnet/src/test/: client.rs  concurrency.rs  mod.rs  package.rs
config/: Cargo.toml  README.md
config/src/: binding.rs  config.rs  errors.rs  fixture.rs  lib.rs  parser.rs  schema.rs  yaml.rs
config/src/remaps/: binding.rs  config.rs  fixture.rs  mod.rs
config/src/schema/: bindings.rs  config.rs  fixture.rs  fixture_type.rs  mod.rs
config/src/test/: common.rs  parser.rs
examples/: README.md  chfuchte-aula.yaml  chfuchte-halloween-2024.yaml  config.yaml
examples/dev/: client.html  config.yaml
frontend/: README.md  index.html  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx
logger/: Cargo.toml
logger/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/config/: binding.rs  fixture.rs  mod.rs  schema.rs  yaml.rs
server/src/handlers/: errors.rs  handle_default.rs  handle_dfc.rs  handle_vars.rs  handler.rs  mod.rs  parse_variable.rs  utils.rs  with_dfc.rs  with_vars.rs
server/src/test/: bindings.rs  mod.rs  parser.rs  variable_extraction.rs
server/src/wshandlers/: handler.rs  mod.rs  parse_variable.rs
src/: app.rs  main.rs
src/artnet/: mod.rs  package.rs  socket.rs
src/utils/: term.rs
