[package]
name = "server"
description = "a websocket-server to control lighting fixtures via artnet"
version = "0.1.0"
edition = "2021"

[dependencies]
artnet = { path = "../artnet" }
logger = { path = "../logger" }
tungstenite = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
